[gd_scene load_steps=13 format=3 uid="uid://cnh2gm7b6k6qf"]

[ext_resource type="Script" uid="uid://ddbcnbcl4rnuf" path="res://scripts/game.gd" id="1_vtaks"]
[ext_resource type="Script" uid="uid://dp514n4ul3op1" path="res://scripts/stage_handler.gd" id="2_vtaks"]
[ext_resource type="Script" uid="uid://c6ubwejmc188k" path="res://players_manager.gd" id="3_dinhu"]
[ext_resource type="Script" uid="uid://cc3ogep372v8" path="res://scripts/player_spawner.gd" id="4_kvuet"]
[ext_resource type="Script" uid="uid://v2bbm1lgibpy" path="res://scripts/misobon_path.gd" id="5_trtic"]
[ext_resource type="Script" uid="uid://cb0rr8pr2674f" path="res://scripts/misobon_player_spawner.gd" id="6_ir15t"]
[ext_resource type="PackedScene" uid="uid://c4i5gyl4cut3t" path="res://scenes/bombs/bomb_pool.tscn" id="7_ca42v"]
[ext_resource type="PackedScene" uid="uid://b22qg08qddy6x" path="res://scenes/pick_up_pool.tscn" id="8_rysoc"]
[ext_resource type="PackedScene" uid="uid://ywlmyq88jlvj" path="res://scenes/breakable_pool.tscn" id="9_kvpfn"]
[ext_resource type="PackedScene" uid="uid://b3638glthchxv" path="res://scenes/ingame_ui/multiplayer_game_ui.tscn" id="10_kvpfn"]
[ext_resource type="PackedScene" uid="uid://mjwddadi7v4o" path="res://scenes/ingame_ui/record_winner.tscn" id="11_kvpfn"]

[sub_resource type="Curve2D" id="Curve2D_6r17b"]
_data = {
"points": PackedVector2Array(0.297315, 2.88107, 0, 0, 240, 16, 0, 0, 0, 0, 464, 16, 0, 0, 0, 0, 464, 464, 0, 0, 0, 0, 16, 464, 0, 0, 0, 0, 16, 16, 0, 0, 0, 0, 240, 16)
}
point_count = 6

[node name="Game" type="Node2D"]
script = ExtResource("1_vtaks")

[node name="StageHandler" type="Node2D" parent="."]
script = ExtResource("2_vtaks")
metadata/_custom_type_script = "uid://dp514n4ul3op1"

[node name="Players" type="Node2D" parent="."]
script = ExtResource("3_dinhu")

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="Players"]
spawn_path = NodePath("..")
script = ExtResource("4_kvuet")

[node name="MisobonPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_6r17b")
script = ExtResource("5_trtic")

[node name="MisobonPlayerSpawner" type="MultiplayerSpawner" parent="MisobonPath"]
spawn_path = NodePath("..")
script = ExtResource("6_ir15t")

[node name="BreakablePool" parent="." instance=ExtResource("9_kvpfn")]

[node name="BombPool" parent="." instance=ExtResource("7_ca42v")]

[node name="PickupPool" parent="." instance=ExtResource("8_rysoc")]
extra_bomb = 15
explosion_boost = 15
speed_boost = 15
max_explosion = 5
punch_ability = 10

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(250, 250)
zoom = Vector2(1.3, 1.3)

[node name="Timers" type="Node" parent="."]

[node name="MatchTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 120.0
one_shot = true
autostart = true

[node name="MultiplayerGameUI" parent="." instance=ExtResource("10_kvpfn")]

[node name="GameEndState" parent="." instance=ExtResource("11_kvpfn")]
visible = false
